--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
 layout: base
 ---
-<h2>Testing</h2>
+<h1>Home</h1>
+This is the website of Henrik Skov Midtiby.
+I'm a post doc at the University of Southern Denmark, interested in image analysis and plant recognition 
+within the field of agriculture.
