Uploaded my presentation about classifiers and objectrecognition.

--- a/presentations.html
+++ b/presentations.html
@@ -10,3 +10,11 @@ layout: base
 <h2>Introduktion til LaTeX</h2>
 <p>This presentation (in danish) gives an introduction to the typesetting language LaTeX,
 <a href="../downloads/IntroduktionTilLatex.zip">download</a>.</p>
+
+<h2>Introduktion to classifiers</h2>
+<p>This presentation is from a guest lecture about object recognition and classifiers,
+<a href="../downloads/2014-11-05classifierspresentation.pdf">download</a>.</p>
+
+<h2>Object recognition</h2>
+<p>This presentation is from a guest lecture about object recognition and classifiers,
+<a href="../downloads/2014-11-05featurespresentation.pdf">download</a>.</p>
