Slides for the latex continued lecture.

--- a/presentations.html
+++ b/presentations.html
@@ -11,6 +11,10 @@ layout: base
 <p>This presentation (in danish) gives an introduction to the typesetting language LaTeX,
 <a href="../downloads/IntroduktionTilLatex.zip">download</a>.</p>
 
+<h2>Introduktion til LaTeX continued</h2>
+<p>This presentation is a continuation of the introduction lecture above.
+<a href="../downloads/LatexContinued.zip">download</a>.</p>
+
 <h2>Introduktion to classifiers</h2>
 <p>This presentation is from a guest lecture about object recognition and classifiers,
 <a href="../downloads/2014-11-05classifierspresentation.pdf">download</a>.</p>
