Added a presentation about complex numbers and image analysis.

--- a/presentations.html
+++ b/presentations.html
@@ -22,3 +22,8 @@ layout: base
 <h2>Object recognition</h2>
 <p>This presentation is from a guest lecture about object recognition and classifiers,
 <a href="../downloads/2014-11-05featurespresentation.pdf">download</a>.</p>
+
+<h2>Complex numbers and image analysis</h2>
+<p>A presentation about how to use complex numbers for locating certain
+markers based on repeating patterns in grayscale images, 
+<a href="../downloads/2015-05-28ComplexNumbersAndImageAnalysis.pdf">download</a>.</p>
