Added my presentation for CIGR about weed map generation.

--- a/presentations.html
+++ b/presentations.html
@@ -27,3 +27,12 @@ layout: base
 <p>A presentation about how to use complex numbers for locating certain
 markers based on repeating patterns in grayscale images, 
 <a href="../downloads/2015-05-28ComplexNumbersAndImageAnalysis.pdf">download</a>.</p>
+
+<h2>Weed map generation from UAV image mosaics based on crop row detection</h2>
+<p>A presentation about how to generate a weed map from a UAV ortho mosaic.
+Presentation from CIGR 2016. [
+<a href="../downloads/2016-06-28WeedMapGeneration.pdf">slides</a>, 
+<a href="https://www.youtube.com/watch?v=aJ2zXLHS2YE">video</a>].
+</p>
+
+
