Made it easier to access the slides as pdf files directly.

--- a/presentations.html
+++ b/presentations.html
@@ -9,11 +9,13 @@ layout: base
 
 <h2>Introduktion til LaTeX</h2>
 <p>This presentation (in danish) gives an introduction to the typesetting language LaTeX,
-<a href="../downloads/IntroduktionTilLatex.zip">download</a>.</p>
+<a href="../downloads/IntroduktionTilLatex.zip">download materials</a>, 
+<a href="../downloads/IntroduktionTilLatex.pdf">download slides as pdf</a>.</p>
 
 <h2>Introduktion til LaTeX continued</h2>
-<p>This presentation is a continuation of the introduction lecture above.
-<a href="../downloads/LatexContinued.zip">download</a>.</p>
+<p>This presentation is a continuation of the introduction lecture above,
+<a href="../downloads/LatexContinued.zip">download materials</a>,
+<a href="../downloads/LatexContinued.pdf">download slides as pdf</a>.</p>
 
 <h2>Introduktion to classifiers</h2>
 <p>This presentation is from a guest lecture about object recognition and classifiers,
