Presentation about differential equations.

--- a/presentations.html
+++ b/presentations.html
@@ -38,3 +38,8 @@ Presentation from CIGR 2016. [
 </p>
 
 
+<h2>Differentialligninger (danish)</h2>
+<p>A presentation about differential equations, 
+<a href="../downloads/2017-03-02differentialligninger.pdf">slides</a>download. 
+</p>
+
