Fix typo error.

--- a/presentations.html
+++ b/presentations.html
@@ -40,6 +40,6 @@ Presentation from CIGR 2016. [
 
 <h2>Differentialligninger (danish)</h2>
 <p>A presentation about differential equations, 
-<a href="../downloads/2017-03-02differentialligninger.pdf">slides</a>download. 
+<a href="../downloads/2017-03-02differentialligninger.pdf">download</a>. 
 </p>
 
