Added slides for inted.

--- a/presentations.html
+++ b/presentations.html
@@ -43,3 +43,9 @@ Presentation from CIGR 2016. [
 <a href="../downloads/2017-03-02differentialligninger.pdf">download</a>. 
 </p>
 
+<h2>Students' benefit from video with interactive quizzes in a first-year calculus course</h2>
+<p>A presentation about differential equations, 
+<a href="../downloads/2017-03-06studentbenefits.pdf">slides as pdf</a>,
+<a href="../downloads/2017-03-06studentbenefits.pdf">slides as html</a>. 
+</p>
+
