--- a/presentations.html
+++ b/presentations.html
@@ -46,6 +46,6 @@ Presentation from CIGR 2016. [
 <h2>Students' benefit from video with interactive quizzes in a first-year calculus course</h2>
 <p>A presentation about differential equations, 
 <a href="../downloads/2017-03-06studentbenefits.pdf">slides as pdf</a>,
-<a href="../downloads/2017-03-06studentbenefits.pdf">slides as html</a>. 
+<a href="../downloads/2017-03-06studentbenefits.zip">slides as html</a>. 
 </p>
 
