--- a/downloads/objecttracker/objecttracker.html
+++ b/downloads/objecttracker/objecttracker.html
@@ -226,6 +226,8 @@ function grabCurrentFrameFromVideo()
 </table>
 
 
+<div id="tracked_coordinates_ID"></div>
+
 <script>
 // document.getElementById("canvasOutput").addEventListener('mousemove', grabCurrentFrameFromVideo);
 
@@ -237,6 +239,9 @@ let videoInput = document.getElementById('videoInput');
 let startAndStop = document.getElementById('startAndStop');
 let canvasOutput = document.getElementById('canvasOutput');
 let canvasContext = canvasOutput.getContext('2d');
+let tracked_coordinates = document.getElementById('tracked_coordinates_ID');
+
+tracked_coordinates.innerHTML += 'Coordinates';
 
 videoInput.addEventListener('canplay', () => {
     startAndStop.removeAttribute('disabled');
@@ -259,6 +264,7 @@ startAndStop.addEventListener('click', () => {
 function onVideoStarted() {
     streaming = true;
     startAndStop.innerText = 'Stop';
+    tracked_coordinates.innerHTML = 'frame\tx\ty<br>';
     track_object_in_video();
 }
 
@@ -319,24 +325,18 @@ let roi = frame.roi(trackWindow);
 let hsvRoi = new cv.Mat();
 cv.cvtColor(roi, hsvRoi, cv.COLOR_RGBA2RGB);
 cv.cvtColor(hsvRoi, hsvRoi, cv.COLOR_RGB2HSV);
-let mask = new cv.Mat();
-let lowScalar = new cv.Scalar(0, 10, 10);
-let highScalar = new cv.Scalar(255, 255, 255);
-let low = new cv.Mat(hsvRoi.rows, hsvRoi.cols, hsvRoi.type(), lowScalar);
-let high = new cv.Mat(hsvRoi.rows, hsvRoi.cols, hsvRoi.type(), highScalar);
-cv.inRange(hsvRoi, low, high, mask);
 let roiHist = new cv.Mat();
 let hsvRoiVec = new cv.MatVector();
 hsvRoiVec.push_back(hsvRoi);
-let hsv_bins = 8;
-let histogram_size = 256;
-let saturation_bins = 8;
-let intensity_bins = 8;
-cv.calcHist(hsvRoiVec, [0, 1, 2], mask, roiHist, [hsv_bins, saturation_bins, intensity_bins], [0, histogram_size, 0, 255, 0, 255]);
-cv.normalize(roiHist, roiHist, 0, 255, cv.NORM_MINMAX);
+let hsv_bins = 10;
+let saturation_bins = 10;
+let intensity_bins = 10;
+let mask = new cv.Mat();
+cv.calcHist(hsvRoiVec, [0, 1, 2], mask, roiHist, [hsv_bins, saturation_bins, intensity_bins], [0, 256, 0, 256, 0, 256]);
+cv.normalize(roiHist, roiHist, 50, 235, cv.NORM_MINMAX);
 
 // delete useless mats.
-roi.delete(); hsvRoi.delete(); mask.delete(); low.delete(); high.delete(); hsvRoiVec.delete();
+roi.delete(); hsvRoi.delete(); hsvRoiVec.delete();
 
 // Setup the termination criteria, either 10 iteration or move by atleast 1 pt
 let termCrit = new cv.TermCriteria(cv.TERM_CRITERIA_EPS | cv.TERM_CRITERIA_COUNT, 10, 1);
@@ -351,6 +351,7 @@ let dst = new cv.Mat();
 let trackBox = null;
 
 const FPS = 30;
+let frame_counter = 0;
 function processVideo() {
     try {
         if (!streaming) {
@@ -359,6 +360,7 @@ function processVideo() {
             return;
         }
         let begin = Date.now();
+        frame_counter += 1;
 
         // start processing.
         cap.read(frame);
@@ -367,7 +369,7 @@ function processVideo() {
         cv.cvtColor(hsv, hsv, cv.COLOR_RGB2HSV);
         let hsvVec = new cv.MatVector();
         hsvVec.push_back(hsv);
-        cv.calcBackProject(hsvVec, [0, 1, 2], roiHist, dst, [0, histogram_size, 0, 255, 0, 255], 1);
+        cv.calcBackProject(hsvVec, [0, 1, 2], roiHist, dst, [0, 256, 0, 256, 0, 256], 1);
 
         // Apply meanshift to get the new location
         // and it also returns number of iterations meanShift took to converge,
@@ -379,7 +381,6 @@ function processVideo() {
         cv.rectangle(memory, new cv.Point(x, y), new cv.Point(x+w, y+h), [255, 0, 0, 255], 2);
         cv.rectangle(frame, new cv.Point(x, y), new cv.Point(x+w, y+h), [255, 0, 0, 255], 2);
 
-        let mask = new cv.Mat();
         let dtype = -1;
         cv.cvtColor(frame, rgb_image, cv.COLOR_RGBA2RGB);
         cv.addWeighted(rgb_image, 0.5, memory, 0.4, 0, destination, -1);
@@ -387,6 +388,8 @@ function processVideo() {
         // cv.imshow('canvasOutput', memory);
         cv.addWeighted(dst, 0.2, dst, 0.4, 0, dst, -1);
         cv.imshow('canvasDebugOutput', dst);
+
+    	tracked_coordinates.innerHTML += frame_counter + "\t" + x + "\t" + y + "<br>\n";
 
         // schedule the next one.
         let delay = 1000/FPS - (Date.now() - begin);
